# cub3d

./: CMakeLists.txt  Makefile  big.cub  map.cub
mlx_engine/: CMakeLists.txt  Makefile
mlx_engine/includes/: images.h  mlx_engine.h  mlx_engine_int.h  mlxe_keys.h
mlx_engine/libft/: CMakeLists.txt  Makefile  ft_gnl.h  ft_lists.h  ft_maths.h  ft_strings.h  ft_vectors.h  libft.h
mlx_engine/libft/ft_printf/: handle_uX.c  handle_x.c
mlx_engine/libft/gnl/: ft_gnl.c  ft_gnl2.c  ft_gnl3.c
mlx_engine/libft/maths/: clamp.c  cos.c  distance.c  dot.c  frac.c  ft_abs.c  ft_degrees.c  ft_dist_line.c  ft_fabs.c  ft_fmax.c  ft_fmin.c  ft_map.c  ft_max.c  ft_min.c  ft_radians.c  inv_lerp.c  lerp.c  normalize.c  rotate.c  sin.c  smoothstep.c  wrap.c
mlx_engine/libft/maths/random/: ft_frand.c  ft_frand2.c  ft_noise2.c  ft_rand_circle.c
mlx_engine/libft/maths/vectors/: vectors_f.c  vectors_f_add.c  vectors_f_div.c  vectors_f_mult.c  vectors_f_p.c  vectors_f_sub.c  vectors_f_to_i.c  vectors_i.c  vectors_i_add.c  vectors_i_div.c  vectors_i_mult.c  vectors_i_p.c  vectors_i_sub.c  vectors_i_to_f.c  vectors_len.c  vectors_mod.c
mlx_engine/libft/std/: ft_atoix.c  ft_ftoa.c  ft_malloc.c  ft_memdup.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_readfile.c
mlx_engine/libft/std/cmp/: ft_cmpaddr.c  ft_cmpint.c
mlx_engine/libft/std/lists/: ft_lst_to_array.c  ft_lst_to_array_pointers.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstfind.c  ft_lstmap.c  ft_lstnew.c  ft_lstremove.c  ft_lstremoveif.c
mlx_engine/libft/std/strings/: ft_dupsplit.c  ft_freesplit.c  ft_isalnum.c  ft_split.c  ft_splitlen.c  ft_str_append.c  ft_str_isnum.c  ft_strgetindex.c  ft_strncmp.c
mlx_engine/minilibx/: CMakeLists.txt  Makefile  mlx.h  mlx_new_image.m  mlx_new_window.h  mlx_new_window.m  mlx_xpm.c
mlx_engine/mlx_linux/: CMakeLists.txt  Makefile.mk  mlx.h  mlx_destroy.c  mlx_ext_randr.c  mlx_hook.c  mlx_init.c  mlx_int.h  mlx_lib_xpm.c  mlx_loop.c  mlx_new_image.c  mlx_sync.c  mlx_xpm.c  mlx_xpm.c.ok
mlx_engine/srcs/: CMakeLists.txt  engine.c
mlx_engine/srcs/coroutines/: CMakeLists.txt  coroutines.c
mlx_engine/srcs/debug/: CMakeLists.txt  debug_entries_parse.c  debug_entry.c  debug_graph.cl  debug_menu.h  debug_menu_draw.c  debug_menu_free.c  debug_menu_init.c
mlx_engine/srcs/images/: CMakeLists.txt  colors.c  images.c  images2.c  overlay_image.c
mlx_engine/srcs/inputs/: CMakeLists.txt  input2.c  input3.c  inputs.c  mouse_move.c
mlx_engine/srcs/kernels/: mlxe_eval_img.cl  mlxe_set_alpha.cl  ui_kernel.cl
mlx_engine/srcs/mainloop/: CMakeLists.txt  fps_counter.c  hooks1.c  hooks2.c  mainloop.c
mlx_engine/srcs/opencl/: CMakeLists.txt  mlxcl.h  opencl_buffers.c  opencl_build.c  opencl_debug.c  opencl_exec.c  opencl_free.c  opencl_img_buffer.c  opencl_init.c  opencl_prog.c
mlx_engine/srcs/t_game/: CMakeLists.txt  create_game.c  free_game.c
mlx_engine/srcs/t_ui/: CMakeLists.txt  draw_ui.c  mlxe_ui.h  ui_create.c  ui_remove.c  ui_select.c  update_ui_selection.c
mlx_engine/srcs/text/: CMakeLists.txt  char_info.c  fonts.c  init.c  render_font.c  render_text.c  textbuilder.h
mlx_engine/srcs/utils/: CMakeLists.txt  log.c  time.c  utils.c
srcs/: CMakeLists.txt  convert_size.c  free_img_ui.c  main.c
srcs/cleanup/: CMakeLists.txt  cleanup.c  cleanup.h  cleanup_entity.c  cleanup_map.c
srcs/entities/: CMakeLists.txt  create_entity.c  draw_entities.c  obj_parser.c  obj_parser.h  obj_parser2.c  obj_parser3.c
srcs/entities/renderer_3d/: draw_tris.cl  drawing.c  init_renderer.c  projection.c  projection.cl  reset_depth_buffer.cl  sprites.c
srcs/file_pool_n/: CMakeLists.txt  cmp_f_fd.c  f_fd.c  f_fd.h  free_f_fd.c
srcs/ingame/: CMakeLists.txt  check_doors.c  game_loop.c
srcs/ingame/escape_menu/: escape_menu.c  escape_menu.h  escape_menu_continue.c  escape_menu_init.c  escape_menu_main_menu.c  escape_menu_options.c  escape_menu_root.c  root_eval.cl
srcs/ingame/minimap/: minimap.c  minimap.cl
srcs/ingame/player_controller/: controller.c  controller2.c
srcs/init/: CMakeLists.txt  init.c  init2.c
srcs/intro_n/: CMakeLists.txt  background.cl  cells.c  eval_cell_basic.cl  intro.c  intro.h  skip_prompt.c
srcs/intro_n/holes_anim/: holes_anim.h  holes_anim_loop.c  holes_anim_start.c  holes_anim_update_cells.c
srcs/intro_n/verifier/: map_verifier.h
srcs/intro_n/verifier/done_anim/: done_anim.cl  done_anim_loop.c  (+1 more)
srcs/lights_n/: CMakeLists.txt  add_light.c  remove_light.c  update_light.c
srcs/map_parser/: CMakeLists.txt  allocate_map.c  check_map.c  duplicate_map.c  map_parser.h  parse_textures.c  parser_funcs.c  parser_map.c  parser_symbols.c  parsing_chain.c  process_map.c
srcs/menu/: CMakeLists.txt  main_menu.c  menu.h  menu_background.c  menu_root.cl
srcs/menu/find_background_view/: bg_view.c
srcs/menu/main_menu_uis/: mult_button.c  mult_button_eval.cl  options_button.c  quit_button.c  start_button.c
srcs/multiplayer/: CMakeLists.txt  cleanup_multi.c  multi_free.c  multi_free2.c  multiplayer.c  multiplayer.h  multiplayer_utils.c  register_player.c  stop_multi.c
srcs/multiplayer/client/: client_log.c  client_main_thread.c  client_receive_loop.c  client_send_loop.c  receive_map.c  receive_map2.c  send_broadcast.c  send_broadcast2.c  start_client.c  start_client_main_thread.c
srcs/multiplayer/events/: build_event.c  build_event2.c  events_builder.h  float_conversions.c  free_event.c  free_event2.c  parse_event.c  parse_event2.c  read_event.c  read_event_from.c
srcs/multiplayer/server/: client_instance.c  client_receive_thread.c  client_receive_thread2.c  client_send_thread.c  player_join.c  send_map.c  send_map2.c  server_broadcast_thread.c  server_log.c  server_main_thread.c  start_server.c
srcs/raycast/: CMakeLists.txt  init_raycast.c  raycast.c  raycast.cl  raycast_cleanup.c  raycast_dists.c  raycast_draw.c  raycast_draw.cl
srcs/transition_n/: CMakeLists.txt  fade.cl  fade_in.c  fade_out.c  transition.c  transition.h
srcs/ui_elements/: CMakeLists.txt  bool_button.c  bool_button.cl  slider.c  slider_bg.cl  slider_handle.cl
(+30 files in other folders)
