target_sources(cub3d PUBLIC main.c free_img_ui.c convert_size.c)
add_subdirectory(cleanup)
add_subdirectory(entities)
add_subdirectory(file_pool_n)
add_subdirectory(ingame)
add_subdirectory(init)
add_subdirectory(intro_n)
add_subdirectory(lights_n)
add_subdirectory(map_parser)
add_subdirectory(menu)
add_subdirectory(multiplayer)
add_subdirectory(raycast)
add_subdirectory(transition_n)
add_subdirectory(ui_elements)
