add_library(ft)
target_include_directories(ft PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_sources(ft PRIVATE
    ft_printf/ft_printf.c
    ft_printf/ft_printf.h
    ft_printf/handle_c.c
    ft_printf/handle_d.c
    ft_printf/handle_i.c
    ft_printf/handle_p.c
    ft_printf/handle_s.c
    ft_printf/handle_u.c
    ft_printf/handle_uX.c
    ft_printf/handle_x.c
    gnl/ft_gnl.c
    gnl/ft_gnl2.c
    gnl/ft_gnl3.c
    libft.h
    maths/clamp.c
    maths/cos.c
    maths/distance.c
    maths/dot.c
    maths/frac.c
    maths/ft_abs.c
    maths/ft_degrees.c
    maths/ft_dist_line.c
    maths/ft_fabs.c
    maths/ft_fmax.c
    maths/ft_fmin.c
    maths/ft_is_prime.c
    maths/ft_isrange.c
    maths/ft_magnitude.c
    maths/ft_map.c
    maths/ft_max.c
    maths/ft_min.c
    maths/ft_pow.c
    maths/ft_radians.c
    maths/inv_lerp.c
    maths/lerp.c
    maths/normalize.c
    maths/random/ft_frand.c
    maths/random/ft_frand2.c
    maths/random/ft_noise2.c
    maths/random/ft_rand_circle.c
    maths/rotate.c
    maths/sin.c
    maths/smoothstep.c
    maths/vectors
    maths/vectors/vectors_f.c
    maths/vectors/vectors_f_add.c
    maths/vectors/vectors_f_div.c
    maths/vectors/vectors_f_mult.c
    maths/vectors/vectors_f_p.c
    maths/vectors/vectors_f_sub.c
    maths/vectors/vectors_f_to_i.c
    maths/vectors/vectors_i.c
    maths/vectors/vectors_i_add.c
    maths/vectors/vectors_i_div.c
    maths/vectors/vectors_i_mult.c
    maths/vectors/vectors_i_p.c
    maths/vectors/vectors_i_sub.c
    maths/vectors/vectors_i_to_f.c
    maths/vectors/vectors_len.c
    maths/vectors/vectors_mod.c
    maths/wrap.c
    std/cmp/ft_cmpaddr.c
    std/cmp/ft_cmpint.c
    std/ft_atoi.c
    std/ft_atoix.c
    std/ft_bzero.c
    std/ft_calloc.c
    std/ft_ftoa.c
    std/ft_itoa.c
    std/ft_malloc.c
    std/ft_memchr.c
    std/ft_memcmp.c
    std/ft_memcpy.c
    std/ft_memdup.c
    std/ft_memmove.c
    std/ft_memset.c
    std/ft_nrange.c
    std/ft_putchar_fd.c
    std/ft_putendl_fd.c
    std/ft_putnbr_fd.c
    std/ft_putstr_fd.c
    std/ft_range.c
    std/ft_readfile.c
    std/ft_uitoa.c
    std/lists/ft_lst_to_array.c
    std/lists/ft_lst_to_array_pointers.c
    std/lists/ft_lstadd_back.c
    std/lists/ft_lstadd_front.c
    std/lists/ft_lstclear.c
    std/lists/ft_lstdelone.c
    std/lists/ft_lstfind.c
    std/lists/ft_lstiter.c
    std/lists/ft_lstlast.c
    std/lists/ft_lstmap.c
    std/lists/ft_lstnew.c
    std/lists/ft_lstremove.c
    std/lists/ft_lstremoveif.c
    std/lists/ft_lstsize.c
    std/strings/ft_dupsplit.c
    std/strings/ft_freesplit.c
    std/strings/ft_isalnum.c
    std/strings/ft_isalpha.c
    std/strings/ft_isascii.c
    std/strings/ft_isdigit.c
    std/strings/ft_isprint.c
    std/strings/ft_split.c
    std/strings/ft_splitlen.c
    std/strings/ft_str_append.c
    std/strings/ft_str_isnum.c
    std/strings/ft_strcat.c
    std/strings/ft_strchr.c
    std/strings/ft_strcmp.c
    std/strings/ft_strdup.c
    std/strings/ft_strgetindex.c
    std/strings/ft_striteri.c
    std/strings/ft_strjoin.c
    std/strings/ft_strlcat.c
    std/strings/ft_strlcpy.c
    std/strings/ft_strlen.c
    std/strings/ft_strmapi.c
    std/strings/ft_strncmp.c
    std/strings/ft_strnstr.c
    std/strings/ft_strrchr.c
    std/strings/ft_strtrim.c
    std/strings/ft_substr.c
    std/strings/ft_tolower.c
    std/strings/ft_toupper.c
)
